:+1: Fix letter spacing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,6 +45,7 @@
 
 *:not(i) {
   font-family: 'Ubuntu', sans-serif !important;
+  letter-spacing: 0.02rem;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6 {
